<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:title="@string/menu_sort"
        >
        <!-- menu movie sort group -->
        <menu>
            <group
                android:checkableBehavior="single"
                android:id="@+id/menu_movie_sort"
                >
                <item
                    android:id="@+id/menu_most_popular"
                    android:title="@string/menu_sort_popular"
                    />
                <item
                    android:id="@+id/menu_highest_rated"
                    android:title="@string/menu_sort_rated"
                    android:checked="true"
                    />
            </group>
        </menu>
    </item>
    <item
        android:title="@string/menu_grid_size"
        >
    <!-- grid view size group -->
        <menu>
            <group
                android:checkableBehavior="single"
                android:id="@+id/menu_grid_size"
                >
                <item
                    android:id="@+id/menu_two"
                    android:title="@string/menu_two"
                    android:checked="true"
                    />
                <item
                    android:id="@+id/menu_three"
                    android:title="@string/menu_three"
                    />
                <item
                    android:id="@+id/menu_four"
                    android:title="@string/menu_four"
                    />
                <item
                    android:id="@+id/menu_five"
                    android:title="@string/menu_five"
                    />
            </group>
        </menu>
    </item>

</menu>